<resources>
    <string name="app_name">Counter</string>
    <string name="new_occurency">New</string>
    <string name="time_from_last">Time from last</string>
    <string name="time_to">Time to next</string>
    <string name="occurency_name">Occurency name</string>
    <string name="occurency_name_tip">Creating new occurency</string>
    <string name="more_often">I want to occur this more often</string>
    <string name="less">I want to occur this less</string>
    <string name="category_text">Choose category</string>
    <string name="add_btn_text">Add</string>
    <string name="auto_start_timer">Start timer after added</string>
    <string name="manual_start_timer">I\'ll decide when start manuallly</string>
    <string name="occurence_name_hint">Caffeine example</string>
    <string name="date_example">today</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_question">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yup</string>
    <string name="date_hint">pobierz date z dolu kliukajaca</string>
    <string name="delete_dateTime_question">Are you sure you want to delete this from list?</string>
    <string name="save_timer_question">Add this activity to list?\nTime: %1s </string>
    <string name="occurence_name">caffeine</string>

    // OccurrenceHome
    <string name="time_late">You should have done this %s ago!</string>

    // Time and date dividers
    <string name="colon_time">%d:%d</string>
    <string name="minus_date">%d-%d-%d </string>
    <string name="dawno_temu">dawno temu</string>
    <string name="affirmation">Wzrasta to, \nczemu poświęcasz uwagę.\n ~ T. Harv Eker</string>
    <string name="time_passed">It passed %s since you did it last time...</string>

    // change fragment title
    <string name="fragmentTitle">%s</string>

    <string-array name="categories">
        <item>Substancje</item>
        <item>Higiena</item>
        <item>Relacje</item>
        <item>Rozwój</item>
        <item>Trening</item>
        <item>Obowiazki dom.</item>
    </string-array>
</resources>