<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/tip_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occurency_name_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginBottom="16dp"
        style="@style/Widget.Counter.TextView"/>

    <ImageView
        android:id="@+id/icon_infinity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/occurence_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/occurence_name"
        app:srcCompat="@drawable/ic_infinity" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/occurence_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:hint="@string/occurency_example"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/icon_infinity"
        app:layout_constraintTop_toBottomOf="@+id/tip_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/occurence_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:inputType="text"

            />

    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/start_counter_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/automatic_start"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/occurence_name">

        <RadioButton
            android:id="@+id/automatic_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auto_start_timer" />

        <RadioButton
            android:id="@+id/manual_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/manual_start_timer" />

    </RadioGroup>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/frequency_switch"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:checked="true"
        android:text="@string/more_often"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_counter_options" />


    <TextView
        android:id="@+id/category_text"
        style="@style/Widget.Counter.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/category_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frequency_switch" />

    <TextView
        android:id="@+id/occurency_display"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New occurency will appear here :)))"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_text" />

    <Button
        android:id="@+id/add_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/add_btn_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <!-- TODO check-boxy dla kategorii     -->
    <!--DONE    radio 'counter ma sie zacząć w momencie dodania aktywności','sam puszcze taimer' -->
    <!-- DONE switch czy ma sie zdarzac czesciej czy rzadziej -->
</androidx.constraintlayout.widget.ConstraintLayout>