<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="1dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emojiLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:layout_constraintEnd_toStartOf="@id/occurence_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <com.vanniktech.emoji.EmojiEditText

                android:id="@+id/emojiEditText"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:imeOptions="actionSend"
                android:maxLength="3"
                android:textSize="17sp"
                app:maxEmojiCount="3" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/occurence_name_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/occurence_name_hint"

            app:boxCornerRadiusBottomEnd="50dp"
            app:boxCornerRadiusBottomStart="50dp"
            app:boxCornerRadiusTopEnd="50dp"
            app:boxCornerRadiusTopStart="50dp"
            app:layout_constraintBottom_toBottomOf="@+id/emojiLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/emojiLayout"
            app:layout_constraintTop_toTopOf="@+id/emojiLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/occurrence_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:imeOptions="actionDone"
                android:inputType="textAutoComplete|textCapWords"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="11111"
            app:layout_constraintBottom_toTopOf="@+id/divider1"
            app:layout_constraintEnd_toStartOf="@id/tvTime"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/occurence_name_label"
            tools:text="11.11.1111" />

        <TextView
            android:id="@+id/tvTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="timetime"
            app:layout_constraintBottom_toBottomOf="@id/tvDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tvDate"
            app:layout_constraintTop_toTopOf="@id/tvDate"
            tools:layout_editor_absoluteY="109dp"
            tools:text="18:03" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toTopOf="@+id/setIntervalsBox"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTime" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/setIntervalsBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_colorful"
            app:layout_constraintBottom_toTopOf="@id/divider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider1">

            <TextView
                android:id="@+id/tv_set_interval"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Set interval:"
                app:layout_constraintEnd_toStartOf="@id/frequency_scrollView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <HorizontalScrollView
                android:id="@+id/frequency_scrollView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tv_set_interval"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/frequency_chipGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:checkedChip="@+id/chip_minutes"
                        app:selectionRequired="true"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_minutes"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Minutes" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_hours"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Hours" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_days"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Days" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_weeks"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Weeks" />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/chip_months"
                            style="@style/CustomChipStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Months" />

                    </com.google.android.material.chip.ChipGroup>

                </LinearLayout>
            </HorizontalScrollView>

            <NumberPicker
                android:id="@+id/interval_number_picker"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/frequency_scrollView"
                app:layout_constraintTop_toBottomOf="@+id/frequency_scrollView" />


            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:text="Set value"
                app:layout_constraintStart_toStartOf="@+id/tv_set_interval"
                app:layout_constraintTop_toBottomOf="@+id/tv_set_interval" />

            <TextView
                android:id="@+id/affirmation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/affirmation"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/interval_number_picker"
                app:layout_constraintTop_toBottomOf="@+id/frequency_scrollView" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setIntervalsBox" />

        <TextView
            android:id="@+id/choose_category_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/category_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category_label"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:hint="Choose category"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/choose_category_text"
            app:startIconDrawable="@drawable/ic_categories">

            <AutoCompleteTextView
                android:id="@+id/category_dropdown"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/add_occurrence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:contentDescription="Add activity"
            android:src="@drawable/ic_save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>